--- a/packages/server.nitro/package.json
+++ b/packages/server.nitro/package.json
@@ -50,6 +50,7 @@
         "access": "public"
     },
     "dependencies": {
-        "@master/css": "workspace:^"
+        "@master/css": "workspace:^",
+        "@master/css-server": "workspace:^"
     }
 }
