--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -40,7 +40,7 @@
         "access": "public"
     },
     "dependencies": {
-        "@master/css": "workspace:^",
+        "@master/css-server": "workspace:^",
         "@techor/log": "^2.5.4",
         "@techor/glob": "^2.5.4",
         "explore-config": "^2.5.4"
