--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,6 @@
         "monaco-editor": "^0.44.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
-        "shared": "workspace:*"
+        "shared": "workspace:../../../shared"
     }
 }
