Perf: Improve rule parsing and transformation
Squashed commit of the following:

commit 47cc19b54a5317556d0f94d96ee6520139b6ce82
Author: BenSeage <bg012300@gmail.com>
Date:   Fri Nov 3 22:07:43 2023 +0800

    Update CSS

commit adc23c9bcdbb6d7e2156851be00d228ceed9eee3
Author: Miles <git@miles.tw>
Date:   Fri Nov 3 15:14:11 2023 +0800

    Update ESLint Example

commit 466a907dd825b29ce6be03ad54007ffcd3ee0f9a
Author: 1aron <i@aron.tw>
Date:   Fri Nov 3 11:04:20 2023 +0800

    Refactor css

commit 2f8999691c4dc377f09c00321f16cd50a155488f
Author: 1aron <i@aron.tw>
Date:   Fri Nov 3 03:49:42 2023 +0800

    Refactor rule and core

commit c8559714c932d7d30945824c0b6fa4072fe75bdc
Author: 1aron <i@aron.tw>
Date:   Thu Nov 2 22:10:13 2023 +0800

    Remove transparent variable

commit dab99892179aaa2c0951a14574cb10cb9ebeab58
Author: Miles <git@miles.tw>
Date:   Thu Nov 2 20:33:32 2023 +0800

    Update ESLint

commit 9d161013f992a25fa400849c42460e9bcfeb541a
Merge: 4a910d88 3e1e0b56
Author: 1aron <i@aron.tw>
Date:   Thu Nov 2 18:54:19 2023 +0800

    Merge commit '3e1e0b56bf9ff83ee932de610369f30a0be27c90' into dev/beta

commit 3e1e0b56bf9ff83ee932de610369f30a0be27c90
Author: 1aron <i@aron.tw>
Date:   Thu Nov 2 18:51:58 2023 +0800

    Fix outline tests

commit 3c1f6a4f651b5d9b1811df1891b43d2f50b15b17
Merge: b1364aea e1c28b2a
Author: 1aron <i@aron.tw>
Date:   Thu Nov 2 17:55:47 2023 +0800

    Merge branch 'beta' into pr/lesha1201/299

commit b1364aeab13bbdd44f41c6c09e09cfb34698ed55
Author: Alexey Ryabov <lesha_12_01@mail.ru>
Date:   Wed Nov 1 11:02:51 2023 +0300

    Fix(CSS): `outline` doesn't handle some keyword values

    Now `outline` works well with CSS-wide keywords and all `outline-style` keywords.

--- a/examples/eslint/package.json
+++ b/examples/eslint/package.json
@@ -7,6 +7,8 @@
         "@master/eslint-plugin-css": "workspace:^",
         "@typescript-eslint/parser": "^6.9.0",
         "clsx": "^2.0.0",
-        "eslint": "^8.51.0"
+        "eslint": "^8.51.0",
+        "eslint-mdx": "^2.2.0",
+        "eslint-plugin-mdx": "^2.2.0"
     }
 }
