--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -48,7 +48,9 @@
         "@types/node": "^20.6.0",
         "@typescript-eslint/parser": "^5.50.0",
         "@typescript-eslint/utils": "^6.9.0",
-        "eslint": "^8.0.0",
+        "eslint": "^8.52.0",
+        "eslint-plugin-markdown": "^3.0.1",
+        "eslint-plugin-mdx": "^2.2.0",
         "svelte-eslint-parser": "^0.33.1",
         "vue-eslint-parser": "^9.3.1"
     }
