--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
     "private": true,
     "scripts": {
         "postinstall": "husky install && pnpm ls --r --filter \"./packages/*\"",
-        "build": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./packages/*",
-        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run build --filter=./examples/*",
-        "check": "pnpm run commit-check && pnpm run build && turbo run test lint type-check --parallel --filter=./packages/*",
-        "test": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run test --parallel --filter=./packages/*",
-        "lint": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run lint --parallel --filter=./packages/*",
-        "type-check": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run type-check --parallel --filter=./packages/*",
+        "build": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./packages/*\" build",
+        "build:examples": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./examples/*\" build",
+        "check": "pnpm run commit-check && pnpm run build && pnpm --filter \"./packages/*\" run \"/^(test|lint|type-check)/\" --parallel",
+        "test": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./packages/*\" test --parallel",
+        "lint": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./packages/*\" lint --parallel",
+        "type-check": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./packages/*\" type-check --parallel",
         "commit-check": "commitlint --from=HEAD~1 --verbose",
-        "dev": "cross-env NODE_OPTIONS=--max-old-space-size=16384 turbo run dev --filter=./packages/* --no-cache --force --concurrency=30",
+        "dev": "cross-env NODE_OPTIONS=--max-old-space-size=16384 pnpm --filter \"./packages/*\" dev",
         "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf **/*package-lock.json && rm -rf **/*node_modules && rm -rf **/*dist && rm -rf **/*.turbo"
     },
     "packageManager": "pnpm@8.6.10",
