--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "cd ../ && pnpm build && cd website && next build && pnpm exec mcss render \".next/**/*.html\"",
+        "build": "cd ../ && pnpm build && cd website && next build && node ../packages/css/dist/bin/index.bundle render \".next/**/*.html\"",
         "start": "next start",
         "lint": "next lint",
         "type-check": "tsc --noEmit"
