Add: `class RuntimeCSS`

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -45,13 +45,13 @@
     "jsnext:main": "./dist/index.bundle.mjs",
     "esnext": "./dist/index.bundle.mjs",
     "module": "./dist/index.bundle.mjs",
-    "browser": "./dist/index.browser.bundle.js",
+    "browser": "./dist/runtime.browser.bundle.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "browser": {
                 "import": "./dist/index.bundle.mjs",
-                "types": "./dist/index.browser.d.ts"
+                "types": "./dist/runtime.browser.d.ts"
             },
             "require": "./dist/index.bundle.js",
             "import": "./dist/index.bundle.mjs",
