--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,6 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "next": "^14.0.2",
         "@master/css": "workspace:^",
         "@master/css-extractor": "workspace:^",
         "@master/css-language-service": "workspace:^",
@@ -26,6 +25,7 @@
         "monaco-editor": "^0.44.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
+        "next": "14.0.3-canary.9",
         "theme-service": "workspace:^",
         "websites": "workspace:../../.."
     }
