--- a/website/package.json
+++ b/website/package.json
@@ -25,7 +25,7 @@
         "monaco-editor": "^0.44.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
-        "next": "14.0.3-canary.9",
+        "next": "14.0.2",
         "theme-service": "workspace:^",
         "websites": "workspace:../../.."
     }
