--- a/packages/server.nitro/package.json
+++ b/packages/server.nitro/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/css-server.nitro",
     "scripts": {
-        "build": "techor pack --platform node",
+        "build": "techor pack \"./src/**.ts\" --platform node",
         "dev": "pnpm run build --watch --no-declare",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
@@ -31,16 +31,21 @@
         "ssr"
     ],
     "sideEffects": false,
-    "main": "./dist/index.bundle.js",
-    "jsnext:main": "./dist/index.bundle.mjs",
-    "esnext": "./dist/index.bundle.mjs",
-    "module": "./dist/index.bundle.mjs",
+    "main": "./dist/create-css-server-plugin.js",
+    "module": "./dist/index.mjs",
+    "jsnext:main": "./dist/index.mjs",
+    "esnext": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "require": "./dist/index.bundle.js",
-            "import": "./dist/index.bundle.mjs",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.js",
             "types": "./dist/index.d.ts"
+        },
+        "./create-css-server-plugin": {
+            "import": "./dist/create-css-server-plugin.mjs",
+            "require": "./dist/create-css-server-plugin.js",
+            "types": "./dist/create-css-server-plugin.d.ts"
         }
     },
     "files": [
