--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/eslint-plugin-css",
     "scripts": {
-        "build": "techor pack 'src/**/*.ts'",
+        "build": "techor pack \"src/**/*.ts\"",
         "dev": "pnpm run build --watch --no-declare",
         "test": "jest",
         "type-check": "tsc --noEmit",
