--- a/examples/astro-with-static-extraction/package.json
+++ b/examples/astro-with-static-extraction/package.json
@@ -11,7 +11,8 @@
         "astro": "astro"
     },
     "dependencies": {
-        "astro": "^2.8.3"
+        "@astrojs/sitemap": "^3.0.3",
+        "astro": "^3.5.3"
     },
     "devDependencies": {
         "@master/css": "workspace:^",
