--- a/packages/eslint-plugin/tsconfig.json
+++ b/packages/eslint-plugin/tsconfig.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "rootDir": "src",
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "strict": false
     },
     "include": [
         "src/**/*"
