Fix(Server): Use `htmlparser2` instead of `node-html-parser` to reliably parse HTML

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -50,6 +50,6 @@
     },
     "dependencies": {
         "@master/css": "workspace:^",
-        "node-html-parser": "^6.1.11"
+        "htmlparser2": "^9.0.0"
     }
 }
