--- a/website/package.json
+++ b/website/package.json
@@ -19,8 +19,10 @@
         "@master/eslint-config-css": "workspace:^",
         "@master/eslint-plugin-css": "workspace:^",
         "@master/normal.css": "workspace:^",
+        "@mdx-js/loader": "^2.3.0",
+        "@mdx-js/react": "^2.3.0",
         "@monaco-editor/react": "^4.6.0",
-        "@next/mdx": "^14.0.2",
+        "@next/mdx": "^14.0.4",
         "@vercel/speed-insights": "^1.0.2",
         "accept-language": "^3.0.18",
         "cheerio": "1.0.0-rc.12",
