New: Master CSS Nuxt

--- a/.gitignore
+++ b/.gitignore
@@ -69,5 +69,7 @@ packages/extractor.vite/tests/vite/index.html
 packages/extractor.vite/tests/vite/master.css.*
 packages/extractor.webpack/tests/webpack/src/index.html
 packages/extractor.webpack/tests/webpack/src/master.css.*
+packages/nuxt/**/.nuxt
+packages/nuxt/playground/.output
 
 **/*/cache
