--- a/examples/nuxt.js-with-progressive-rendering/package.json
+++ b/examples/nuxt.js-with-progressive-rendering/package.json
@@ -9,12 +9,14 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
-        "@master/css.nuxt": "workspace:^",
         "@master/css-server": "workspace:^",
+        "@master/css.nuxt": "workspace:^",
         "@master/css.vue": "workspace:^"
     },
     "devDependencies": {
         "@types/node": "^18",
-        "nuxt": "^3.5.2"
+        "nuxt": "^3.9.0",
+        "vue": "^3.4.5",
+        "vue-router": "^4.2.5"
     }
 }
