Add @master/css.vue package and update installation instructions

--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -40,6 +40,7 @@
     ],
     "dependencies": {
         "@nuxt/kit": "^3.8.2",
+        "@master/css.vue": "workspace:^",
         "@master/css-server": "workspace:^",
         "explore-config": "^2.5.20"
     },
