Update .eslintrc and app.vue files

--- a/packages/nuxt/.eslintrc
+++ b/packages/nuxt/.eslintrc
@@ -1,4 +1,9 @@
 {
-  "root": true,
-  "extends": ["@nuxt/eslint-config"]
+    "root": true,
+    "extends": [
+        "@nuxt/eslint-config"
+    ],
+    "ignorePatterns": [
+        "dist"
+    ]
 }
