Add publishConfig to nuxt package

--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -39,6 +39,9 @@
     "files": [
         "dist"
     ],
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {
         "@master/css-server": "workspace:^",
         "@master/css.vue": "workspace:^",
