Update build scripts in package.json

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -2,10 +2,10 @@
     "name": "@master/css-runtime",
     "scripts": {
         "build": "pnpm run \"/^build:/\"",
-        "build:iife": "techor pack \"src/iife.ts\" --outfile \"dist/iife.bundle.js\" --bundle --format iife --no-external",
-        "build:browser-esm": "techor pack \"src/index.ts\" --outfile \"dist/browser.bundle.mjs\" --bundle --declare --format esm --no-external",
-        "build:esm": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.mjs\" --bundle --declare --format esm",
-        "build:cjs": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.js\" --bundle --declare --format cjs",
+        "build:iife": "techor pack \"src/iife.ts\" --outfile \"dist/iife.bundle.js\" --bundle --format iife --no-external --no-clean",
+        "build:browser-esm": "techor pack \"src/index.ts\" --outfile \"dist/browser.bundle.mjs\" --bundle --declare --format esm --no-external --no-clean",
+        "build:esm": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.mjs\" --bundle --declare --format esm --no-clean",
+        "build:cjs": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.js\" --bundle --declare --format cjs --no-clean",
         "dev": "pnpm build --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
