Update build scripts and dependencies

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -3,10 +3,11 @@
     "scripts": {
         "build": "pnpm run \"/^build:/\"",
         "build:iife": "techor pack \"src/iife.ts\" --outfile \"dist/iife.bundle.js\" --bundle --format iife --no-external --no-clean",
-        "build:browser-esm": "techor pack \"src/index.ts\" --outfile \"dist/browser.bundle.mjs\" --bundle --declare --format esm --no-external --no-clean",
-        "build:esm": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.mjs\" --bundle --declare --format esm --no-clean",
-        "build:cjs": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.js\" --bundle --declare --format cjs --no-clean",
-        "dev": "pnpm build --watch",
+        "build:browser-esm": "techor pack \"src/index.ts\" --outfile \"dist/browser.bundle.mjs\" --bundle --format esm --no-external --no-clean",
+        "build:esm": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.mjs\" --bundle --format esm --no-clean",
+        "build:cjs": "techor pack \"src/index.ts\" --outfile \"dist/index.bundle.js\" --bundle --format cjs --no-clean",
+        "build:type": "tsc --emitDeclarationOnly --declaration --outDir dist",
+        "dev": "pnpm run \"/^build:(?!type)/\" --watch",
         "test": "jest",
         "type-check": "tsc --noEmit",
         "lint": "eslint src"
@@ -44,8 +45,7 @@
         ".": {
             "browser": {
                 "import": "./dist/browser.bundle.mjs",
-                "default": "./dist/iife.bundle.js",
-                "types": "./dist/browser.d.ts"
+                "default": "./dist/iife.bundle.js"
             },
             "require": "./dist/index.bundle.js",
             "import": "./dist/index.bundle.mjs",
