--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -1,12 +1,11 @@
 {
     "name": "@master/css.nuxt",
     "scripts": {
-        "build": "nuxt-module-build build --stub",
-        "dev": "nuxi dev playground",
+        "build": "nuxt prepare && nuxt-module-build build --stub",
+        "dev": "nuxt prepare && nuxi dev playground",
         "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
         "lint": "eslint .",
-        "test": "vitest run",
-        "postinstall": "nuxt prepare"
+        "test": "nuxt prepare && vitest run"
     },
     "type": "module",
     "license": "MIT",
@@ -34,6 +33,13 @@
         "ssr"
     ],
     "sideEffects": false,
+    "exports": {
+        ".": {
+            "types": "./dist/types.d.ts",
+            "import": "./dist/module.mjs",
+            "require": "./dist/module.cjs"
+        }
+    },
     "main": "./dist/module.cjs",
     "types": "./dist/types.d.ts",
     "files": [
