--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,10 @@
     "include": [
         "shared/**/*.ts",
         "**/tests/**/*"
-    ]
+    ],
+    "ts-node": {
+      "compilerOptions": {
+        "module": "commonjs"
+      }
+    }
 }
