--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
         "@google-cloud/storage": "^7.7.0",
         "@types/node-fetch": "^2.6.10",
         "cheerio": "^1.0.0-rc.12",
-        "firebase-admin": "^11.11.1",
-        "websites": "workspace:../.."
+        "firebase-admin": "^11.11.1"
     }
 }
