--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "url": "https://github.com/master-co/css.git"
     },
     "devDependencies": {
+        "@google-cloud/storage": "^7.7.0",
         "@master/css": "workspace:^",
         "@master/css-extractor": "workspace:^",
         "@master/css-extractor.vite": "workspace:^",
@@ -36,11 +37,14 @@
         "@techor/version": "^2.5.24",
         "@types/jest": "^29.5.8",
         "@types/node": "^20.4.0",
+        "@types/node-fetch": "^2.6.10",
         "@types/shuffle-array": "^1.0.5",
+        "cheerio": "^1.0.0-rc.12",
         "cross-env": "^7.0.3",
         "css-shared": "workspace:^",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fast-glob": "^3.2.12",
+        "firebase-admin": "^11.11.1",
         "jest": "^29.6.1",
         "jest-extended": "^4.0.0",
         "nanoid": "^4.0.2",
@@ -51,12 +55,7 @@
         "strip-ansi": "^7.1.0",
         "ts-dedent": "^2.2.0",
         "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
         "tsx": "^3.12.7",
-        "turbo": "^1.10.15",
-        "@google-cloud/storage": "^7.7.0",
-        "@types/node-fetch": "^2.6.10",
-        "cheerio": "^1.0.0-rc.12",
-        "firebase-admin": "^11.11.1"
+        "turbo": "^1.10.15"
     }
 }
