Add nextScriptWorkers experimental feature and @builder.io/partytown dev dependency Update style prop in root.layout.tsx Replace link tags with Script tags in play/layout.tsx

--- a/website/package.json
+++ b/website/package.json
@@ -30,5 +30,8 @@
         "next": "14.0.4",
         "theme-service": "workspace:^",
         "websites": "workspace:../../.."
+    },
+    "devDependencies": {
+        "@builder.io/partytown": "^0.8.2"
     }
 }
