Drop: Remove `CONFIG_TEXT` `CONFIG_ESM_TEXT` `CONFIG_TS_TEXT` exports

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -54,6 +54,7 @@
         }
     },
     "bin": {
+        "@master/css": "./dist/bin/index.bundle.js",
         "mcss": "./dist/bin/index.bundle.js",
         "mastercss": "./dist/bin/index.bundle.js"
     },
@@ -75,6 +76,7 @@
         "@types/jest": "^29.5.11",
         "css-shared": "workspace:^",
         "csstype": "^3.1.2",
+        "jest-text-transformer": "^1.0.4",
         "puppeteer": "^21.0.1",
         "vite": "^4.2.1"
     }
