--- a/website/package.json
+++ b/website/package.json
@@ -20,14 +20,15 @@
         "@master/eslint-plugin-css": "workspace:^",
         "@master/normal.css": "workspace:^",
         "@monaco-editor/react": "^4.6.0",
-        "@next/mdx": "^14.0.4",
+        "@next/mdx": "^14.1.0",
+        "@tabler/icons-react": "^2.46.0",
         "@vercel/speed-insights": "^1.0.2",
         "accept-language": "^3.0.18",
         "clone-deep": "^4.0.1",
         "monaco-editor": "^0.45.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
-        "next": "14.0.4",
+        "next": "14.1.0",
         "theme-service": "workspace:^",
         "websites": "workspace:../../.."
     },
