--- a/website/package.json
+++ b/website/package.json
@@ -25,14 +25,22 @@
         "@vercel/speed-insights": "^1.0.2",
         "accept-language": "^3.0.18",
         "clone-deep": "^4.0.1",
+        "eslint-config-next": "^14.1.0",
         "monaco-editor": "^0.45.0",
         "monaco-editor-textmate": "^4.0.0",
         "monaco-textmate": "^3.0.1",
         "next": "14.1.0",
         "theme-service": "workspace:^",
-        "websites": "workspace:../../.."
+        "websites": "workspace:../../..",
+        "react": "^18",
+        "react-dom": "^18"
     },
     "devDependencies": {
-        "@builder.io/partytown": "^0.8.2"
+        "@builder.io/partytown": "^0.8.2",
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8"
     }
 }
